# funasr-api

./: .coverage  .gitignore  README.md  config.yaml  init.sql  install_funasr.sh  main.py  opencode.json  pyproject.toml  pytest.ini  requirements.txt
docs/: README.md  offline-onnx-call-chain.md  offline-pt-call-chain.md  online-onnx-call-chain.md  online-pt-call-chain.md
src/: __init__.py  bootstrap.py  composition.py
tests/: conftest.py  offline_upload_test.html  online_test.html  test_api_uploads.py  test_application_context.py  test_application_lifecycle.py  test_application_task_flow.py  test_application_workflows.py  test_architecture_boundaries.py  test_audio_backup_storage.py  test_behavior_contracts.py  test_composition_graph.py  test_composition_isolation.py  test_config_builder_modules.py  test_config_source.py  test_core_adapter_modules.py  test_core_text_utils.py  test_database_dao_modules.py  test_database_fallbacks.py  test_database_schema.py  test_engine_runtime_configuration.py  test_engine_runtime_model_provider.py  test_engine_runtime_state.py  test_hotword_formats.py  test_model_downloader_paths.py  test_offline_application_flow.py  test_offline_onnx_recognizer.py  test_offline_pt_recognizer.py  test_offline_result_files.py  test_offline_speaker_utils.py  test_online_2pass_sessions.py  test_online_events.py  test_online_helpers.py  test_online_onnx_adapter_modules.py  test_online_route_config.py  test_online_session_modules.py  test_online_stream_runtime.py  test_pt_speaker_recognizer.py  test_runtime_paths.py  test_runtime_safety.py  (+9 more)
(+156 files in other folders)
