[project]
name = "python-api"
version = "0.1.0"
description = "FastAPI service for FunASR offline, online, and speaker recognition"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "addict>=2.4.0",
    "aiohttp>=3.14.1",
    "alembic>=1.13.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "datasets==5.0.0",
    "fastapi>=0.110.0",
    "funasr>=1.1.0",
    "funasr-onnx>=0.4.0",
    "hdbscan==0.8.44",
    "jieba>=0.42.1",
    "librosa>=0.10.0",
    "numpy>=1.26.0",
    # onnxruntime 1.24+ no longer publishes Windows CPython 3.10 wheels.
    "onnxruntime>=1.18.0,<1.24",
    "pillow==12.3.0",
    "psutil>=5.9.0",
    "pymysql>=1.1.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.1",
    "scipy>=1.11.0",
    "simplejson==4.1.1",
    "sortedcontainers==2.4.0",
    "soundfile>=0.12.1",
    "sqlalchemy>=2.0.0",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
]
